// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`record webgl record canvas within iframe will record changes to a canvas element 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 6
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"iframe\\",
                    \\"attributes\\": {
                      \\"id\\": \\"iframe1\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 7
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 8
                  }
                ],
                \\"id\\": 5
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"adds\\": [
        {
          \\"parentId\\": 7,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 0,
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"html\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"head\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [],
                    \\"rootId\\": 9,
                    \\"id\\": 11
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"body\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [],
                    \\"rootId\\": 9,
                    \\"id\\": 12
                  }
                ],
                \\"rootId\\": 9,
                \\"id\\": 10
              }
            ],
            \\"compatMode\\": \\"BackCompat\\",
            \\"id\\": 9
          }
        }
      ],
      \\"removes\\": [],
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"isAttachIframe\\": true
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [],
      \\"adds\\": [
        {
          \\"parentId\\": 12,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 2,
            \\"tagName\\": \\"canvas\\",
            \\"attributes\\": {
              \\"id\\": \\"canvas\\"
            },
            \\"childNodes\\": [],
            \\"rootId\\": 9,
            \\"id\\": 13
          }
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 9,
      \\"id\\": 13,
      \\"type\\": 1,
      \\"commands\\": [
        {
          \\"property\\": \\"clear\\",
          \\"args\\": [
            16384
          ]
        }
      ]
    }
  }
]"
`;

exports[`record webgl recordCanvas FPS should record snapshots 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 6
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"canvas\\",
                    \\"attributes\\": {
                      \\"id\\": \\"canvas\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 7
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 8
                  }
                ],
                \\"id\\": 5
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 9,
      \\"id\\": 7,
      \\"type\\": 0,
      \\"commands\\": [
        {
          \\"property\\": \\"clearRect\\",
          \\"args\\": [
            0,
            0,
            300,
            150
          ]
        },
        {
          \\"property\\": \\"drawImage\\",
          \\"args\\": [
            {
              \\"rr_type\\": \\"ImageBitmap\\",
              \\"args\\": [
                {
                  \\"rr_type\\": \\"Blob\\",
                  \\"data\\": [
                    {
                      \\"rr_type\\": \\"ArrayBuffer\\",
                      \\"base64\\": \\"base64-0\\"
                    }
                  ],
                  \\"type\\": \\"image/png\\"
                }
              ]
            },
            0,
            0
          ]
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 9,
      \\"id\\": 7,
      \\"type\\": 0,
      \\"commands\\": [
        {
          \\"property\\": \\"clearRect\\",
          \\"args\\": [
            0,
            0,
            300,
            150
          ]
        },
        {
          \\"property\\": \\"drawImage\\",
          \\"args\\": [
            {
              \\"rr_type\\": \\"ImageBitmap\\",
              \\"args\\": [
                {
                  \\"rr_type\\": \\"Blob\\",
                  \\"data\\": [
                    {
                      \\"rr_type\\": \\"ArrayBuffer\\",
                      \\"base64\\": \\"base64-1\\"
                    }
                  ],
                  \\"type\\": \\"image/png\\"
                }
              ]
            },
            0,
            0
          ]
        }
      ]
    }
  }
]"
`;

exports[`record webgl should batch events by RAF 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 6
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"canvas\\",
                    \\"attributes\\": {
                      \\"id\\": \\"canvas\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 7
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 8
                  }
                ],
                \\"id\\": 5
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 9,
      \\"id\\": 7,
      \\"type\\": 1,
      \\"commands\\": [
        {
          \\"property\\": \\"createProgram\\",
          \\"args\\": []
        },
        {
          \\"property\\": \\"linkProgram\\",
          \\"args\\": [
            {
              \\"rr_type\\": \\"WebGLProgram\\",
              \\"index\\": 0
            }
          ]
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 9,
      \\"id\\": 7,
      \\"type\\": 1,
      \\"commands\\": [
        {
          \\"property\\": \\"createProgram\\",
          \\"args\\": []
        },
        {
          \\"property\\": \\"linkProgram\\",
          \\"args\\": [
            {
              \\"rr_type\\": \\"WebGLProgram\\",
              \\"index\\": 1
            }
          ]
        },
        {
          \\"property\\": \\"clear\\",
          \\"args\\": [
            16384
          ]
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 9,
      \\"id\\": 7,
      \\"type\\": 1,
      \\"commands\\": [
        {
          \\"property\\": \\"clear\\",
          \\"args\\": [
            16384
          ]
        }
      ]
    }
  }
]"
`;

exports[`record webgl will record changes to a canvas element 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 6
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"canvas\\",
                    \\"attributes\\": {
                      \\"id\\": \\"canvas\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 7
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 8
                  }
                ],
                \\"id\\": 5
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 9,
      \\"id\\": 7,
      \\"type\\": 1,
      \\"commands\\": [
        {
          \\"property\\": \\"clear\\",
          \\"args\\": [
            16384
          ]
        }
      ]
    }
  }
]"
`;

exports[`record webgl will record changes to a canvas element before the canvas gets added (webgl2) 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 6
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"canvas\\",
                    \\"attributes\\": {
                      \\"id\\": \\"canvas\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 7
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 8
                  }
                ],
                \\"id\\": 5
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [],
      \\"adds\\": [
        {
          \\"parentId\\": 5,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 2,
            \\"tagName\\": \\"canvas\\",
            \\"attributes\\": {},
            \\"childNodes\\": [],
            \\"id\\": 9
          }
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 9,
      \\"id\\": 9,
      \\"type\\": 2,
      \\"commands\\": [
        {
          \\"property\\": \\"createProgram\\",
          \\"args\\": []
        },
        {
          \\"property\\": \\"linkProgram\\",
          \\"args\\": [
            {
              \\"rr_type\\": \\"WebGLProgram\\",
              \\"index\\": 0
            }
          ]
        },
        {
          \\"property\\": \\"clear\\",
          \\"args\\": [
            16384
          ]
        }
      ]
    }
  }
]"
`;

exports[`record webgl will record changes to a canvas element before the canvas gets added 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 6
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"canvas\\",
                    \\"attributes\\": {
                      \\"id\\": \\"canvas\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 7
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 8
                  }
                ],
                \\"id\\": 5
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [],
      \\"adds\\": [
        {
          \\"parentId\\": 5,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 2,
            \\"tagName\\": \\"canvas\\",
            \\"attributes\\": {},
            \\"childNodes\\": [],
            \\"id\\": 9
          }
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 9,
      \\"id\\": 9,
      \\"type\\": 1,
      \\"commands\\": [
        {
          \\"property\\": \\"createProgram\\",
          \\"args\\": []
        },
        {
          \\"property\\": \\"linkProgram\\",
          \\"args\\": [
            {
              \\"rr_type\\": \\"WebGLProgram\\",
              \\"index\\": 0
            }
          ]
        },
        {
          \\"property\\": \\"clear\\",
          \\"args\\": [
            16384
          ]
        }
      ]
    }
  }
]"
`;

exports[`record webgl will record changes to a webgl2 canvas element 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 6
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"canvas\\",
                    \\"attributes\\": {
                      \\"id\\": \\"canvas\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 7
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 8
                  }
                ],
                \\"id\\": 5
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 9,
      \\"id\\": 7,
      \\"type\\": 2,
      \\"commands\\": [
        {
          \\"property\\": \\"clear\\",
          \\"args\\": [
            16384
          ]
        }
      ]
    }
  }
]"
`;

exports[`record webgl will record webgl variables 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 6
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"canvas\\",
                    \\"attributes\\": {
                      \\"id\\": \\"canvas\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 7
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 8
                  }
                ],
                \\"id\\": 5
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 9,
      \\"id\\": 7,
      \\"type\\": 1,
      \\"commands\\": [
        {
          \\"property\\": \\"createProgram\\",
          \\"args\\": []
        },
        {
          \\"property\\": \\"linkProgram\\",
          \\"args\\": [
            {
              \\"rr_type\\": \\"WebGLProgram\\",
              \\"index\\": 0
            }
          ]
        },
        {
          \\"property\\": \\"createProgram\\",
          \\"args\\": []
        },
        {
          \\"property\\": \\"linkProgram\\",
          \\"args\\": [
            {
              \\"rr_type\\": \\"WebGLProgram\\",
              \\"index\\": 1
            }
          ]
        }
      ]
    }
  }
]"
`;

exports[`record webgl will record webgl variables in reverse order 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 6
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"canvas\\",
                    \\"attributes\\": {
                      \\"id\\": \\"canvas\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 7
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 8
                  }
                ],
                \\"id\\": 5
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 9,
      \\"id\\": 7,
      \\"type\\": 1,
      \\"commands\\": [
        {
          \\"property\\": \\"createProgram\\",
          \\"args\\": []
        },
        {
          \\"property\\": \\"createProgram\\",
          \\"args\\": []
        },
        {
          \\"property\\": \\"linkProgram\\",
          \\"args\\": [
            {
              \\"rr_type\\": \\"WebGLProgram\\",
              \\"index\\": 1
            }
          ]
        },
        {
          \\"property\\": \\"linkProgram\\",
          \\"args\\": [
            {
              \\"rr_type\\": \\"WebGLProgram\\",
              \\"index\\": 0
            }
          ]
        }
      ]
    }
  }
]"
`;
